--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "yiisoft/yii2": "2.0",
         "php": "5.3.0"
     },
-    "license": "GPL v3",
+    "keywords": {
+        "yii2",
+        "php"
+    },
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Anton Bolotin",
