--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
         "yiisoft/yii2": "2.0",
         "php": "5.3.0"
     },
-    "keywords": {
+    "keywords": [
         "yii2",
         "php"
-    },
+    ],
     "license": "BSD-3-Clause",
     "authors": [
         {
