--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Generating unique identificator for any purposes. Typically used by Yii-widgets (\"id\"-attribute of HTML elements).",
     "require": {
         "yiisoft/yii2": "2.0",
-        "php": "5.3.0"
+        "php": ">=5.3.0"
     },
     "keywords": [
         "yii2",
