--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "abolotin/yii2-unique-id",
     "description": "Generating unique identificator for any purposes. Typically used by Yii-widgets (\"id\"-attribute of HTML elements).",
     "require": {
-        "yiisoft/yii2": "2.0",
+        "yiisoft/yii2": ">=2.0",
         "php": ">=5.3.0"
     },
     "keywords": [
