--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "yiisoft/yii2": ">=2.0.0",
         "php": ">=5.3.0"
     },
+    "minimum-stability": "stable",
     "keywords": [
         "yii2",
         "php"
